--- a/solution.html
+++ b/solution.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Angela's Portfolio</title>
+  <title>Priyanka P D'souza Portfolio</title>
 </head>
 
 <body>
